removed old site template data

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 
-<h1>The Miami Notebook Program:</h1>
+<h1>Hello World</h1>
 <p>
-  Proven to enhance the student computing experience.
+  This is the homepage.
 </p>
