testing scripts setup

--- a/index.html
+++ b/index.html
@@ -7,3 +7,17 @@ title: Home
 <p>
   This is the homepage.
 </p>
+
+
+
+<script type="text/javascript">
+
+$( document ).ready(function() {
+
+    console.log( "ready!" );
+
+    fetchData(getdata,1,"");
+
+});
+
+</script>
