builidng initial data table

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@ title: Home
 ---
 
 <h1>Hello World</h1>
+
 <p>
   This is the homepage.
+</p>
+
+<p>
+	<table id="dataTable"></table>
 </p>
 
 
@@ -13,8 +18,6 @@ title: Home
 <script type="text/javascript">
 
 $( document ).ready(function() {
-
-    console.log( "ready!" );
 
     fetchData(getdata,1,"");
 
