building initial table

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <h1>Hello World</h1>
 
 <p>
-  <form onsubmit="addUser(); return false;" id="adduser">
+  <form onsubmit="alert('test');addUser(); return false;" id="adduser">
   	Name: <input type="text" name="firstname"><input type="text" name="lastname"><br/>
   	Handle: <input type="text" name="twitterhandle">
   	Followers: <input type="text" name="followers"> Following: <input type="text" name="following"> Tweets: <input type="text" name="tweets">
