building initial table

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ title: Home
 <h1>Hello World</h1>
 
 <p>
-  <form onsubmit="alert('test');addUser(); return false;" id="adduser">
-  	Name: <input type="text" name="firstname"><input type="text" name="lastname"><br/>
-  	Handle: <input type="text" name="twitterhandle">
-  	Followers: <input type="text" name="followers"> Following: <input type="text" name="following"> Tweets: <input type="text" name="tweets">
+  <form onsubmit="return false;" id="adduser">
+  	Name: <input type="text" id="firstname"><input type="text" id="lastname"><br/>
+  	Handle: <input type="text" id="twitterhandle">
+  	Followers: <input type="text" id="followers"> Following: <input type="text" id="following"> Tweets: <input type="text" id="tweets">
   </form>
 </p>
 
