building initial table

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title: Home
 
 <h1>Hello World</h1>
 
+<!--
 <p>
   <form onsubmit="return false;" id="adduser">
   	Name: <input type="text" id="firstname"><input type="text" id="lastname"><br/>
@@ -12,6 +13,10 @@ title: Home
   	Followers: <input type="text" id="followers"> Following: <input type="text" id="following"> Tweets: <input type="text" id="tweets">
   </form>
 </p>
+-->
+
+<p>
+Gathering data...<img src="{{site.baseurl}}/resources/img/loading.png";
 
 <p>
 	<table class="datatable" id="dataTable"></table>
