building initial table

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@ title: Home
 </p>
 -->
 
-<p>
+<p id="loading">
 Gathering data...<img src="{{site.baseurl}}/resources/img/loading.png";
+
+</p>
 
 <p>
 	<table class="datatable" id="dataTable"></table>
