--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Home
 -->
 
 <p id="loading">
-Gathering data...<img src="{{site.baseurl}}/resources/img/loading.png" height="80px">;
+Gathering data...<img src="{{site.baseurl}}/resources/img/loading.gif">;
 
 </p>
 
