building initial table

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Home
 -->
 
 <p id="loading">
-Gathering data...<img src="{{site.baseurl}}/resources/img/loading.gif">;
+Gathering data...<img src="{{site.baseurl}}/resources/img/loading.gif" style="height:60px;">
 
 </p>
 
